# travelplanner

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  START.md  config.py  docker-compose.yml  grafo.md  plan.md  pyproject.toml  requirements.txt
.opencode/rules/: global.md  workflow.md
.opencode/skills/: travelplanner-agents.md  travelplanner-backend.md  travelplanner-testing.md
agents/: itinerary_agent.py  planner_agent.py  rag_agent.py  search_agent.py  utils.py
api/: main.py
api/models/: models.py
api/routers/: chat.py  health.py  rag_admin.py  session.py
api/schemas/: session_schema.py
backend/: main.py
backend/api/: itinerary.py  plan.py  search.py
backend/config/: env_loader.py  settings.py
backend/utils/: errors.py  logger.py
docs/agents/: architect.md  developer.md  pm.md  qa.md
graph/: graph.py  nodes.py  state.py
integrations/flights/: amadeus.py  skyscanner.py
integrations/hotels/: booking.py  expedia.py
integrations/maps/: gmaps.py  ors.py
integrations/tours/: getyourguide.py  viator.py
nodes/: enrich_itinerary_node.py  fetch_attractions_node.py  fetch_flights_node.py
prompts/: README.md  conversational.txt  itinerary.txt  planner.txt  search.txt  unified_itinerary.txt
rag/: embeddings.py  ingest.py  rag_query.py  vectorstore.py
services/: config.py
services/attractions/: attraction_location_service.py  (+2 more)
tests/: conftest.py  test_agents.py  test_api.py  test_flight_destination_service.py  test_location_service.py  test_rag.py
ui/: chat.js  index.html  styles.css
(+35 files in other folders)
