[project]
name = "travelplanner"
version = "0.1.0"
description = "Planificador de viajes inteligente con LangGraph y Ollama"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.10",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "langchain-ollama>=0.2.0",
    "langchain-chroma>=0.1.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.0.1",
    "langgraph>=0.2.0",
    "requests>=2.31.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
